2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.
	* poke/pk-table.c: Likewise.
	* poke/*.c: Use pk-table to print tabulated data.
	* testsuite/poke.cmd/*.pk: Update.
	* etc/poke.rec (pk-table): Remove as done.

2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.
	* poke/pk-table.c: Likewise.
	* poke/Makefile.am (poke_SOURCES): Add pk-table.c and pk-table.h.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (canary): Use JITTER_STATE_BACKING_FIELD.
	(exit): Likewise.
	(pushob): Likewise.
	(popob): Likewise.
	(pushom): Likewise.
	(popom): Likewise.
	(pushoo): Likewise.
	(popoo): Likewise.
	(pushoi): Likewise.
	(popoi): Likewise.
	(pushod): Likewise.
	(popod): Likewise.
	(pushoac): Likewise.
	(popoac): Likewise.
	(pushopp): Likewise.
	(popopp): Likewise.
	(strace): Likewise.
	(exit): Likewise.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Define PKL_INSN_BEGINHL and
	PKL_INSN_ENDHL.
	* libpoke/pvm.jitter (beghl): New instruction.
	(endhl): Likewise.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (poke_term_if): Register color-related handlers in
	the terminal interface.
	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_TERM_GET_COLOR): Define.
	(PKL_AST_BUILTIN_TERM_SET_COLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_GET_BGCOLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_SET_BGCOLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_RGB_TO_COLOR): Likewise.
	* libpoke/pkl-tab.y: Tokens for new builtins.
	(builtin): Rules for new builtins.
	* libpoke/pkl-lex.l: Handle new built-ins.
	* libpoke/pkl-rt.pk (term_get_color): New builtin.
	(term_set_color): Likewise.
	(term_get_color): Likewise.
	(term_set_bgcolor): Likewise.
	(term_get_bgcolor): Likewise.
	(term_rgb_to_color): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Generate code for
	terminal color related builtins.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>
