@@ -1,5 +1,14 @@
 2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-info.c (info_types_cmd): Likewise.
+	(info_cmds): Add info_types_cmd.
+	* poke/pk-cmd-def.c (info_types_cmd): Define.
+	(pk_cmd_info_types): New function.
+	(print_type_decl): Likewise.
+	* etc/poke.rec (Support the command `info types'): Remove as done.
+
+2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-table.h: New file.
 	* poke/pk-table.c: Likewise.
 	* poke/*.c: Use pk-table to print tabulated data.
